refactoring for rich domains